v1.2.3
- FIX: Header mobile drawer's overflow scrolling CSS.
- FIX: WooCommerce's star's color CSS in the review form page.
- FIX: WooCommerce's "My Account" page CSS for non-logged in users.

v1.2.2
- FIX: WooCommerce's product review CSS on mobile devices.
- FIX: Brizy Integration's CSS reset bug on Safari when using light text on dark background.

v1.2.1
- FIX: Theme's typography bug inside Gutenberg editor (overriding custom typography settings from 3rd party addons).
- FIX: Overlapping select2 CSS on the admin's metabox.

v1.2.0
- NEW: Implement template inheritances using template files (via custom `get_template_part` function). Developers could easily override template files from Child Theme.
- NEW: Social links widget.
- NEW: Items gap options for Post Layout: Default.
- NEW: Excerpt options for Post Layout: Default.
- NEW: Excerpt options for Post Layout: Grid.
- NEW: Additional style options for Post Layout: Default - items gap.
- NEW: Additional style options for Post Layout: Grid - padding, border.
- NEW: Filter `suki/frontend/meta_avatar_size` to change gravatar size on entry meta.
- NEW: Migration process to v1.2.0.
- TWEAK: Improve Brizy integration.
- TWEAK: Improve dynamic custom CSS generation performance by filtering the CSS array based on the saved theme options only.
- TWEAK: Improve string on post navigation to avoid wrong translation on the "%title" syntax.
- TWEAK: Improve Gutenberg CSS.
- TWEAK: Improve WooCommerce CSS.
- TWEAK: Improve some text strings.
- FIX: Header search dropdown bug for not showing on mobile devices.
- FIX: Sub menu overflow bug (remove JS that detects vertical overflow).
- FIX: WooCommerce product gallery's zoom and lightbox bugs.
- FIX: Minor Customizer CSS since WordPress 5.3.

v1.1.2
- TWEAK: Improve UX of Customizer's builder control: hide add button when there is no available element left.
- FIX: Header menu's underline highlight CSS.
- FIX: Customizer's shadow control doesn't show Color Palette.

v1.1.1